# tic-tac-toe

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  index.html  main.py  openapi.json  pyproject.toml  pytest.ini
alembic/: env.py  script.py.mako
alembic/versions/: 09794d5025fc_initial.py  b1c2d3e4f5a6_moves_xy_coords.py  c2d3e4f5a6b7_moves_position_index.py
app/: __init__.py  dependency_injection.py  environment.py  models.py
app/api/: ai_coach.py  games.py
app/domain/: exceptions.py
app/metrics/: __init__.py  middleware.py  noop.py  protocol.py
app/persistence/: database.py  game_repository.py  in_memory_game_repository.py  schemas.py  sqlalchemy_game_repository.py
app/services/: ai_coach.py  game_service.py
bruno/tic-tac-toe/: coach_game.yml  coach_status.yml  create_game.yml  delete_game.yml  get_game.yml  list_game_moves.yml  list_games.yml  make_move.yml  opencollection.yml
bruno/tic-tac-toe/environments/: local.yml
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  secret.yaml  service.yaml
tests/: __init__.py  test_metrics.py
tests/api/: test_games_api.py
tests/persistence/: test_in_memory_game_repository.py  test_sqlalchemy_game_repository.py
tests/services/: test_ai_coach.py  test_ai_coach_service.py  test_game_service.py
