# Purpose: Project metadata and dependency management configuration.
# Architecture: Configuration.
# Notes: Uses uv for dependency management. Defines build system and project dependencies.
[project]
name = "tic-tac-toe"
version = "0.1.0"
description = "A REST API for multi-session tic-tac-toe built with FastAPI, SQLAlchemy, and SQLite."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.14.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "openai",
    "pydantic>=2.12.5",
    "sqlalchemy[asyncio]>=2.0.48",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.0",
    "ty>=0.0.21",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.14"
